--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -51,3 +51,12 @@ spec:
     - id: debug
       name: Debug
       action: debug:log
+      input:
+        message: ${{ parameters | dump }}
+
+    - id: dockerProcessor
+      name: Updating
+      action: process:docker
+      input:
+        url: Dockerfile
+    
