--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -70,4 +70,4 @@ spec:
       input:
         sourcePath: source
         targetPath: target
-        dockerfile: Dockerfile.addDotnetProject
+        dockerfile: source/Dockerfile.addDotnetProject
