--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: add-dotnet-project-v1.0
-  title: .NET project TEST-1
+  title: .NET project TEST-2
   description: Add a .NET 6 project to an existing repository
 spec:
   owner: Team Platform
@@ -64,6 +64,12 @@ spec:
         url: ${{ parameters.targetRepoUrl }}
         targetPath: target
 
+    - id: debug3
+      name: Debug
+      action: debug:log
+      input:
+        listWorkspace: true
+        
     - id: dockerProcessor
       name: Updating
       action: process:docker
