--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: add-dotnet-project-v1.0
-  title: .NET project TEST-2
+  title: .NET project TEST-3
   description: Add a .NET 6 project to an existing repository
 spec:
   owner: Team Platform
@@ -53,7 +53,7 @@ spec:
       action: fetch:template
       input:
         url: ${{ steps.sourceEntityRefResolver.output.entity.metadata.annotations["backstage.io/source-location"] | replace("url:", "", 1) }}/template
-        targetPath: target
+        targetPath: source
         values:
           name: 'ProjectName'
 
