--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -1,8 +1,8 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: add-dotnet-project-v4
-  title: .NET project TEST-3
+  name: add-dotnet-project-v1.0
+  title: .NET project TEST-4
   description: Add a .NET 6 project to an existing repository
 spec:
   owner: Team Platform
@@ -59,10 +59,11 @@ spec:
 
     - id: fetchTarget
       name: Fetch Target
-      action: fetch:plain
+      action: fetch:template
       input:
         url: ${{ parameters.targetRepoUrl }}
         targetPath: target
+        copyWithoutRender: [ '*' ]
 
     - id: debug3
       name: Debug
