--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: add-dotnet-project-v1.0
-  title: .NET project TEST-6
+  title: .NET project TEST-7
   description: Add a .NET 6 project to an existing repository
 spec:
   owner: Team Platform
@@ -55,7 +55,7 @@ spec:
         url: ${{ steps.sourceEntityRefResolver.output.entity.metadata.annotations["backstage.io/source-location"] | replace("url:", "", 1) }}/template
         targetPath: source
         values:
-          name: 'ProjectName'
+          - name: 'ProjectName'
 
     - id: fetchTarget
       name: Fetch Target
@@ -63,7 +63,9 @@ spec:
       input:
         url: ${{ parameters.targetRepoUrl }}
         targetPath: target
-#        copyWithoutRender: [ '*' ]
+        copyWithoutRender: [ '*' ]
+        values:
+          - name: 'ProjectName'
 
     - id: fetchDockerfile
       name: Fetch Add Pipeline
@@ -71,7 +73,9 @@ spec:
       input:
         url: ${{ steps.sourceEntityRefResolver.output.entity.metadata.annotations["backstage.io/source-location"] | replace("url:", "", 1) }}/Dockerfile.addDotnetProject
         targetPath: docker
-#        copyWithoutRender: [ '*' ]
+        copyWithoutRender: [ '*' ]
+        values:
+          - name: 'ProjectName'
 
     - id: debug3
       name: Debug
