--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -94,3 +94,5 @@ spec:
         sourcePath: source
         targetPath: target
         dockerfile: docker/Dockerfile.addDotnetProject
+        buildArgs:
+          PROJECT_NAME: ${{ parameters.name }}
