--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -45,9 +45,9 @@ spec:
       input:
         entityRef: ${{ parameters.sourceEntity }}
 
-    - id: targetRepoUrlResolver
+    - id: targetRepoUrlParser
       name: Build Repo URLs
-      action: createParseRepositoryUrlAction
+      action: parse-repository-url
       input:
         url: ${{ parameters.targetRepoUrl }}
 
