--- a/ptf-1403/sources/dotnet-project/template.yaml
+++ b/ptf-1403/sources/dotnet-project/template.yaml
@@ -2,7 +2,7 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: add-dotnet-project-v1.0
-  title: .NET project TEST-13
+  title: .NET project TEST-14
   description: Add a .NET 6 project to an existing repository
 spec:
   owner: Team Platform
@@ -86,14 +86,15 @@ spec:
       input:
         listWorkspace: true
     
-    - id: dockerBuild
-      name: Adding
-      action: build-k8s
+    - id: k8sProcessor
+      name: Processing
+      action: k8s-processor
       input:
         sourcePath: source
         targetPath: target
-        dockerfile: docker/Dockerfile.addDotnetProject
-        buildArgs:
+        processorImage: mcr.microsoft.com/dotnet/sdk:6.0
+        processorScript: processor.sh
+        env:
           PROJECT_NAME: ${{ parameters.name }}
 
     - id: debug4
